sample/config-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: prometheus
  name: allow-from-katastasi
  namespace: monitoring
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
      ports:
        - port: 9090
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: prometheus
  policyTypes:
    - Ingress
    - Egress
